--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -4805,8 +4805,8 @@ i_Z&=i_{R1}-i_B\\
 
 برقی رو کا حد مقرر کرنے کی خاطر استعمال کئے گئے مزاحمت \عددی{r} کی وجہ سے خارجی برقی دباو \عددی{v_L}  پر اثر ہوتا ہے جس سے \عددی{v_L=V_{Z0}-V_{BE}-i_L r} لیکن جیسا آپ نے دیکھا اس مزاحمت کی قیمت نہایت کم ہوتی ہے اور کم برقی رو پر اس کے اثر کو نظر انداز کیا جا سکتا ہے۔اس مزاحمت کے اثر کو منبع میں مزید پرزے نسب کر کے ختم کیا جا سکتا ہے۔
 %===================
-\حصہ{ٹرانزسٹر لاگ ایمپلیفائر}
-شکل \حوالہ{شکل_ٹرانزسٹر_لاگ_ایمپلیفائر} میں ٹرانزسٹر \اصطلاح{لاگ ایمپلیفائر}\فرہنگ{لاگ ایمپلیفائر}\حاشیہب{log amplifier}\فرہنگ{log amplifier} دکھایا گیا ہے۔\عددی{v_k=v_n=\SI{0}{\volt}} ہونے کی بدولت
+\حصہ{ٹرانزسٹر لوگارتھمی ایمپلیفائر}
+شکل \حوالہ{شکل_ٹرانزسٹر_لوگارتھم_ایمپلیفائر} میں ٹرانزسٹر \اصطلاح{لوگارتھمی ایمپلیفائر}\فرہنگ{لوگارتھمی ایمپلیفائر}\حاشیہب{log amplifier}\فرہنگ{log amplifier} دکھایا گیا ہے۔\عددی{v_k=v_n=\SI{0}{\volt}} ہونے کی بدولت
 \begin{align*}
 i_I=\frac{v_I}{R}
 \end{align*}
@@ -4823,13 +4823,13 @@ i_C \approx I_S e^{\frac{v_{BE}}{V_T}}
 \begin{align}
 v_O=-V_T \ln \frac{v_I}{I_S R}
 \end{align}
-حاصل ہوتا ہے۔اس مساوات کے تحت خارجی برقی دباو \عددی{v_O} داخلی برقی دباو کے قدرتی \اصطلاح{لاگ}\حاشیہب{\عددی{\ln}} کے برابر ہے۔یہاں رک کر شکل \حوالہ{شکل_ڈایوڈ_لاگ_ایمپلیفائر} کو بھی ایک نظر دیکھیں۔
+حاصل ہوتا ہے۔اس مساوات کے تحت خارجی برقی دباو \عددی{v_O} داخلی برقی دباو کے قدرتی \اصطلاح{لوگارتھم}\حاشیہب{\عددی{\ln}} کے برابر ہے۔یہاں رک کر شکل \حوالہ{شکل_ڈایوڈ_لوگارتھم_ایمپلیفائر} کو بھی ایک نظر دیکھیں۔
 %
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorLogAmplifier}
-\caption{ٹرانزسٹر لاگ ایمپلیفائر}
-\label{شکل_ٹرانزسٹر_لاگ_ایمپلیفائر}
+\caption{ٹرانزسٹر لوگارتھمی ایمپلیفائر}
+\label{شکل_ٹرانزسٹر_لوگارتھم_ایمپلیفائر}
 \end{figure}
 %=
 \حصہ{شاٹکی ٹرانزسٹر}
