--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -639,8 +639,8 @@ i_R=\frac{v_I-V_r}{R}
 \جزوحصہ{کامل حیطہ اتار کار}
 شکل \حوالہ{شکل_کامل_نصف_لہر_سمت_کار} پ میں کامل \اصطلاح {حیطہ اتار کار} دکھایا گیا ہے۔امید کی جاتی ہے کہ اس کی کارکردگی  آپ خود سمجھ پائیں گے۔
 
-\جزوحصہ{ڈایوڈ لاگ ایمپلیفائر}
-حسابی منفی ایمپلیفائر میں مزاحمت کی جگہ ڈایوڈ نسب کرنے سے شکل \حوالہ{شکل_ڈایوڈ_لاگ_ایمپلیفائر} الف کا \اصطلاح {لاگ ایمپلیفائر}\فرہنگ{لاگ ایمپلیفائر}\فرہنگ{log amplifier}\حاشیہب{log amplifier} حاصل ہوتا ہے۔مثبت \عددی{v_i} کی صورت میں \عددی{v_o} منفی ہو گا جس سے \عددی{D_1} سیدھا مائل جبکہ \عددی{D_2} الٹا مائل ہو گا۔اسی طرح منفی  \عددی{v_i} کی صورت میں \عددی{v_o} مثبت ہو گا جس سے \عددی{D_1} الٹا مائل جبکہ \عددی{D_2} سیدھا مائل ہو گا۔یوں کسی بھی وقت ایک ڈایوڈ منقطع رہتا ہے جبکہ دوسرا سیدھا مائل رہتا ہے۔اگرچہ حقیقت میں منفی متغیرہ کا لاگ نہیں پایا جاتا اور یوں دور میں صرف \عددی{D_1} ہونا چاہئے تھا لیکن عموماً دو ڈایوڈ استعمال کئے جاتے ہیں۔یوں داخلی اشارہ  مثبت یا منفی ممکن ہوتا ہے۔
+\جزوحصہ{ڈایوڈ لوگارتھمی ایمپلیفائر}
+حسابی منفی ایمپلیفائر میں مزاحمت کی جگہ ڈایوڈ نسب کرنے سے شکل \حوالہ{شکل_ڈایوڈ_لوگارتھم_ایمپلیفائر} الف کا \اصطلاح {لوگارتھمی ایمپلیفائر}\فرہنگ{لوگارتھمی ایمپلیفائر}\فرہنگ{log amplifier}\حاشیہب{log amplifier} حاصل ہوتا ہے۔مثبت \عددی{v_i} کی صورت میں \عددی{v_o} منفی ہو گا جس سے \عددی{D_1} سیدھا مائل جبکہ \عددی{D_2} الٹا مائل ہو گا۔اسی طرح منفی  \عددی{v_i} کی صورت میں \عددی{v_o} مثبت ہو گا جس سے \عددی{D_1} الٹا مائل جبکہ \عددی{D_2} سیدھا مائل ہو گا۔یوں کسی بھی وقت ایک ڈایوڈ منقطع رہتا ہے جبکہ دوسرا سیدھا مائل رہتا ہے۔اگرچہ حقیقت میں منفی متغیرہ کا لوگارتھم نہیں پایا جاتا اور یوں دور میں صرف \عددی{D_1} ہونا چاہئے تھا لیکن عموماً دو ڈایوڈ استعمال کئے جاتے ہیں۔یوں داخلی اشارہ  مثبت یا منفی ممکن ہوتا ہے۔
 
 مثبت \عددی{v_i} کی صورت میں حل کرتے ہیں۔حسابی ایمپلیفائر کے مثبت مداخل برقی زمین کے ساتھ جڑا ہے لہٰذا اس پر برقی دباو \عددی{v_k} صفر ہو گا۔منفی مداخل پر برقی دباو \عددی{v_n} لکھتے ہوئے کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
@@ -652,7 +652,7 @@ i_R=\frac{v_I-V_r}{R}
 -\frac{v_i}{R}+I_S e^{\frac{-v_o}{V_T}}=0\\
 \frac{v_i}{I_S R}= e^{\frac{-v_o}{V_T}}
 \end{align*}
-حاصل ہوتا ہے جہاں ڈایوڈ پر برقی دباو کو \عددی{v_n-v_o} لیا گیا ہے۔دونوں جانب \اصطلاح {قدرتی لاگ}\حاشیہب{natural log} لیتے ہوئے حاصل ہوتا ہے۔
+حاصل ہوتا ہے جہاں ڈایوڈ پر برقی دباو کو \عددی{v_n-v_o} لیا گیا ہے۔دونوں جانب \اصطلاح {قدرتی لوگارتھم}\حاشیہب{natural log} لیتے ہوئے حاصل ہوتا ہے۔
 \begin{align*}
 v_o=-V_T \ln {\left( \frac{v_i}{I_S R} \right)}
 \end{align*}
@@ -660,11 +660,11 @@ v_o=-V_T \ln {\left( \frac{v_i}{I_S R} \right)}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{logAmplifier}
-\caption{لاگ ایمپلیفائر}
-\label{شکل_ڈایوڈ_لاگ_ایمپلیفائر}
+\caption{لوگارتھمی ایمپلیفائر}
+\label{شکل_ڈایوڈ_لوگارتھم_ایمپلیفائر}
 \end{figure}
 
-شکل  ب میں  \اصطلاح {قدرتی الٹ-لاگ ایمپلیفائر}\فرہنگ{الٹ لاگ}\فرہنگ{anti-log}\حاشیہب{natural anti-log} دکھایا گیا ہے۔حسابی ایمپلیفائر کے دونوں مداخل کو برقی زمین تصور کرتے ہوئے مثبت \عددی{v_i} کی صورت میں ڈایوڈ \عددی{D_1} سیدھا مائل ہوتے ہوئے
+شکل  ب میں  \اصطلاح {قدرتی الٹ-لوگارتھم ایمپلیفائر}\فرہنگ{الٹ لوگارتھمی}\فرہنگ{anti-log}\حاشیہب{natural anti-log} دکھایا گیا ہے۔حسابی ایمپلیفائر کے دونوں مداخل کو برقی زمین تصور کرتے ہوئے مثبت \عددی{v_i} کی صورت میں ڈایوڈ \عددی{D_1} سیدھا مائل ہوتے ہوئے
 \begin{align*}
 i_D&=I_S e^{\frac{v_i-v_n}{V_T}}\\
 &=I_S e^{\frac{v_i}{V_T}}
@@ -674,10 +674,10 @@ i_D&=I_S e^{\frac{v_i-v_n}{V_T}}\\
 I_S e^{\frac{v_i}{V_T}}=\frac{v_n-v_o}{R}\\
 v_o=-I_S R e^{\frac{v_i}{V_T}}
 \end{align*}
-حاصل ہوتا ہے۔آپ دیکھ سکتے ہیں کہ یہ دور داخلی اشارے کا \اصطلاح {قدرتی الٹ-لاگ} حاصل کرتا ہے۔
+حاصل ہوتا ہے۔آپ دیکھ سکتے ہیں کہ یہ دور داخلی اشارے کا \اصطلاح {قدرتی الٹ-لوگارتھم} حاصل کرتا ہے۔
 %===================
 \جزوحصہ{ضرب کار}
-\عددی{v_A} اور \عددی{v_B} کے لاگ جمع کرنے سے \عددی{\ln v_A+\ln v_B=\ln v_A v_B} حاصل ہوتا ہے جس کا الٹ-لاگ لینے سے \عددی{v_A v_B} یعنی دونوں متغیرات کا حاصل ضرب حاصل ہوتا ہے۔اسی حقیقت کو استعمال کرتے ہوئے لاگ اور الٹ-لاگ ایمپلیفائر استعمال کرتے  ہوئے شکل \حوالہ{شکل_ڈایوڈ_ضرب_کار} میں \اصطلاح {ضرب کار}\فرہنگ{ضرب کار}\حاشیہب{multiplier}\فرہنگ{multiplier} حاصل کیا گیا ہے۔لاگ ایمپلیفائر کے مساوات استعمال کرتے ہوئے ہم لکھ سکتے ہیں۔
+\عددی{v_A} اور \عددی{v_B} کے لوگارتھم جمع کرنے سے \عددی{\ln v_A+\ln v_B=\ln v_A v_B} حاصل ہوتا ہے جس کا الٹ-لوگارتھم لینے سے \عددی{v_A v_B} یعنی دونوں متغیرات کا حاصل ضرب حاصل ہوتا ہے۔اسی حقیقت کو استعمال کرتے ہوئے لوگارتھمی اور الٹ لوگارتھمی ایمپلیفائر استعمال کرتے  ہوئے شکل \حوالہ{شکل_ڈایوڈ_ضرب_کار} میں \اصطلاح {ضرب کار}\فرہنگ{ضرب کار}\حاشیہب{multiplier}\فرہنگ{multiplier} حاصل کیا گیا ہے۔لوگارتھمی ایمپلیفائر کے مساوات استعمال کرتے ہوئے ہم لکھ سکتے ہیں۔
 
 \begin{align*}
 v_{o1}&=-V_T \ln \frac{v_{i1}}{I_S R}\\
@@ -689,7 +689,7 @@ v_{o3}&=-\left(v_{o1}+v_{o2} \right)\\
 &=V_T \ln \frac{v_{i1}}{I_S R}+V_T \ln \frac{v_{i2}}{I_S R}\\
 &=V_T \ln \frac{v_{i1} v_{i2}}{I_S^2 R^2}
 \end{align*}
-اور الٹ-لاگ کے مساوات سے
+اور الٹ لوگارتھمی کے مساوات سے
 \begin{align*}
 v_0&=-I_S R e^{\frac{v_{o3}}{V_T}}\\
 &=-I_S R e^{\ln \frac{v_{i1} v_{i2}}{I_S^2 R^2}}\\
