--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -3,7 +3,7 @@
 \حصہ{پست تعددی رد عمل}
 ٹرانزسٹر باب کے حصہ \حوالہ{حصہ_ٹرانزسٹر_بدلتی_بار_خط} میں ایمپلیفائر میں کپیسٹر کا استعمال دکھایا گیا جہاں کپیسٹر کی قیمت لامحدود تصور کرتے ہوئے ادوار حل کئے گئے۔ اس باب میں کپیسٹر کے کردار پر تفصیلاً بحث کی جائے گی اور اس کی قیمت تعین کرنا سکھایا جائے گا۔
 
-اس باب میں افزائش کی حتمی قیمت \عددی{\abs{A}} کو \اصطلاح{افزائش} ہی پکارا جائے گا۔جہاں وضاحت کی ضرورت ہو وہاں اسے افزائش کی حتمی قیمت کہہ کر پکارا جائے گا۔ٹرانزسٹر ایمپلیفائر کی افزائش \عددی{A_v} ( یا \عددی{A_i} ) کے حتمی قیمت کی تعددی ردِ عمل عموماً شکل \حوالہ{شکل_عمومی_تعددی_ردعمل} کے طرز پر ہوتی ہے۔ایسا خط عموماً \اصطلاح{لاگ-لاگ}\حاشیہب{log-log} محدد پر کھینچا جاتا ہے۔ایمپلیفائر کی زیادہ سے زیادہ افزائش \عددی{A_{vD}}  ( \عددی{A_{iD}}) \اصطلاح{درمیانی تعدد} پر رونما ہوتی ہے جبکہ بہت کم اور بہت زیادہ تعدد پر اس کی قیمت گھٹ جاتی ہے۔شکل میں \عددی{f_L} اور \عددی{f_H} دو ایسے تعدد کی وضاحت کی ہے جس پر افزائش کم ہوتے ہوتے \عددی{\frac{\abs{A_{vD}}}{\sqrt{2}}}  (یا \عددی{\frac{\abs{A_{iD}}}{\sqrt{2}}} ) ہو جاتی ہے۔ \عددی{f_L}   کو \اصطلاح{پست انقطاعی تعدد}\فرہنگ{پست انقطاعی تعدد}\فرہنگ{cut-off frequency!low}\حاشیہب{low cut-off frequency} جبکہ \عددی{f_H}  کو \اصطلاح{بلند انقطاعی تعدد}\فرہنگ{بلند انقطاعی تعدد}\فرہنگ{cut-off frequency!high}\حاشیہب{high cut-off frequency}  کہتے ہیں۔ایمپلیفائر کی تعددی رد عمل کی بات کرتے ہوئے تعدد کی تین خطے یا حدود کا عموماً ذکر ہوتا ہے جنہیں \اصطلاح{پست تعدد}\فرہنگ{پست تعدد}\حاشیہب{low frequency}، \اصطلاح{درمیانی تعدد}\فرہنگ{درمیانی تعدد}\حاشیہب{mid frequency} اور \اصطلاح{بلند تعدد}\فرہنگ{بلند تعدد}\حاشیہب{high frequency} کے \اصطلاح{حدود}\حاشیہب{limits}  کہتے ہیں۔\عددی{A_{vD}} لکھتے ہوئے زیرِ نوشت میں \عددی{D} اس حقیقت کو ظاہر کرتا ہے کہ افزائش کی یہ قیمت درمیانی\حاشیہد{لفظ درمیانی کے پہلے حرف "د" کی آواز سے \عددی{D} حاصل کی گئی ہے} تعدد پر پائی جاتی ہے۔اگرچہ \عددی{f_L} سے کم تعدد یا \عددی{f_H} سے زیادہ تعدد پر بھی ایمپلیفائر کو  استعمال کیا جا سکتا ہے البتہ ان خطوں میں ایمپلیفائر کی افزائش کم ہوتی ہے۔اسی لئے \عددی{f_L}  تا \عددی{f_H} کو  ایمپلیفائر کا \اصطلاح{دائرہ کارکردگی}\فرہنگ{دائرہ کارکردگی}\فرہنگ{band}\حاشیہب{band} \عددی{B}  کہتے ہیں  یعنی
+اس باب میں افزائش کی حتمی قیمت \عددی{\abs{A}} کو \اصطلاح{افزائش} ہی پکارا جائے گا۔جہاں وضاحت کی ضرورت ہو وہاں اسے افزائش کی حتمی قیمت کہہ کر پکارا جائے گا۔ٹرانزسٹر ایمپلیفائر کی افزائش \عددی{A_v} ( یا \عددی{A_i} ) کے حتمی قیمت کی تعددی ردِ عمل عموماً شکل \حوالہ{شکل_عمومی_تعددی_ردعمل} کے طرز پر ہوتی ہے۔ایسا خط عموماً \اصطلاح{لوگارتھم لوگارتھم}\حاشیہب{log-log} محدد پر کھینچا جاتا ہے۔ایمپلیفائر کی زیادہ سے زیادہ افزائش \عددی{A_{vD}}  ( \عددی{A_{iD}}) \اصطلاح{درمیانی تعدد} پر رونما ہوتی ہے جبکہ بہت کم اور بہت زیادہ تعدد پر اس کی قیمت گھٹ جاتی ہے۔شکل میں \عددی{f_L} اور \عددی{f_H} دو ایسے تعدد کی وضاحت کی ہے جس پر افزائش کم ہوتے ہوتے \عددی{\frac{\abs{A_{vD}}}{\sqrt{2}}}  (یا \عددی{\frac{\abs{A_{iD}}}{\sqrt{2}}} ) ہو جاتی ہے۔ \عددی{f_L}   کو \اصطلاح{پست انقطاعی تعدد}\فرہنگ{پست انقطاعی تعدد}\فرہنگ{cut-off frequency!low}\حاشیہب{low cut-off frequency} جبکہ \عددی{f_H}  کو \اصطلاح{بلند انقطاعی تعدد}\فرہنگ{بلند انقطاعی تعدد}\فرہنگ{cut-off frequency!high}\حاشیہب{high cut-off frequency}  کہتے ہیں۔ایمپلیفائر کی تعددی رد عمل کی بات کرتے ہوئے تعدد کی تین خطے یا حدود کا عموماً ذکر ہوتا ہے جنہیں \اصطلاح{پست تعدد}\فرہنگ{پست تعدد}\حاشیہب{low frequency}، \اصطلاح{درمیانی تعدد}\فرہنگ{درمیانی تعدد}\حاشیہب{mid frequency} اور \اصطلاح{بلند تعدد}\فرہنگ{بلند تعدد}\حاشیہب{high frequency} کے \اصطلاح{حدود}\حاشیہب{limits}  کہتے ہیں۔\عددی{A_{vD}} لکھتے ہوئے زیرِ نوشت میں \عددی{D} اس حقیقت کو ظاہر کرتا ہے کہ افزائش کی یہ قیمت درمیانی\حاشیہد{لفظ درمیانی کے پہلے حرف "د" کی آواز سے \عددی{D} حاصل کی گئی ہے} تعدد پر پائی جاتی ہے۔اگرچہ \عددی{f_L} سے کم تعدد یا \عددی{f_H} سے زیادہ تعدد پر بھی ایمپلیفائر کو  استعمال کیا جا سکتا ہے البتہ ان خطوں میں ایمپلیفائر کی افزائش کم ہوتی ہے۔اسی لئے \عددی{f_L}  تا \عددی{f_H} کو  ایمپلیفائر کا \اصطلاح{دائرہ کارکردگی}\فرہنگ{دائرہ کارکردگی}\فرہنگ{band}\حاشیہب{band} \عددی{B}  کہتے ہیں  یعنی
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{freqResponse}
@@ -188,7 +188,7 @@ A_v &=\frac{-4.79463}{1 + \frac{1}{j \times 2 \times \pi \times 1 \times 10^{3} 
 \end{enumerate}
 \انتہا{مثال}
 %===========
-مندرجہ بالا مثال میں ہم نے دیکھا کہ ایک خاص حد سے زیادہ تعدد پر افزائش کی قیمت کو تقریباً \عددی{A_{vD}} کے برابر تصور کیا جا سکتا ہے۔البتہ اس حد سے کم تعدد پر افزائش کی قیمت کم ہو جاتی ہے۔\اصطلاح{بوڈا خط}\فرہنگ{بوڈا خط}\حاشیہب{Bode plot}\فرہنگ{Bode plot} اس قسم کے معلومات کو ظاہر کرنے کا ایک نہایت عمدہ طریقہ ہے۔موجودہ مسئلے میں افزائش بالمقابل تعدد کو \اصطلاح{بوڈا خط} کے طرز پر شکل \حوالہ{شکل_پست_انقطاعی_تعدد_الف} میں کھینچا گیا ہے جہاں تعدد کو \اصطلاح{لاگ}\حاشیہب{log}  پیمانے پر دکھایا گیا ہے۔اس شکل میں زیادہ تعدد پر افزائش تبدیل نہیں ہوتی اور \عددی{\abs{A_{vD}}}  ہی رہتی ہے۔حقیقت میں \اصطلاح{بلند تعدد}\فرہنگ{بلند تعدد}\حاشیہب{high frequency} پر بھی افزائش کم پڑ جاتی ہے۔موجودہ حصے میں صرف \اصطلاح{پست تعدد}\فرہنگ{پست تعدد}\حاشیہب{low frequency} پر افزائش کے کم ہونے پر غور کیا جائے گا۔زیادہ تعدد پر افزائش کے کم ہونے پر آگے جا کر غور کیا جائے گا۔
+مندرجہ بالا مثال میں ہم نے دیکھا کہ ایک خاص حد سے زیادہ تعدد پر افزائش کی قیمت کو تقریباً \عددی{A_{vD}} کے برابر تصور کیا جا سکتا ہے۔البتہ اس حد سے کم تعدد پر افزائش کی قیمت کم ہو جاتی ہے۔\اصطلاح{بوڈا خط}\فرہنگ{بوڈا خط}\حاشیہب{Bode plot}\فرہنگ{Bode plot} اس قسم کے معلومات کو ظاہر کرنے کا ایک نہایت عمدہ طریقہ ہے۔موجودہ مسئلے میں افزائش بالمقابل تعدد کو \اصطلاح{بوڈا خط} کے طرز پر شکل \حوالہ{شکل_پست_انقطاعی_تعدد_الف} میں کھینچا گیا ہے جہاں تعدد کو \اصطلاح{لوگارتھم}\حاشیہب{log}  پیمانے پر دکھایا گیا ہے۔اس شکل میں زیادہ تعدد پر افزائش تبدیل نہیں ہوتی اور \عددی{\abs{A_{vD}}}  ہی رہتی ہے۔حقیقت میں \اصطلاح{بلند تعدد}\فرہنگ{بلند تعدد}\حاشیہب{high frequency} پر بھی افزائش کم پڑ جاتی ہے۔موجودہ حصے میں صرف \اصطلاح{پست تعدد}\فرہنگ{پست تعدد}\حاشیہب{low frequency} پر افزائش کے کم ہونے پر غور کیا جائے گا۔زیادہ تعدد پر افزائش کے کم ہونے پر آگے جا کر غور کیا جائے گا۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{lowCutoffFrequencyA}
@@ -500,7 +500,7 @@ A_v& =A_{vD} \left(\frac{j f +f_1}{j f +f_2} \right)\\
 \end{align}
 حاصل ہوتا ہے جہاں آخری قدم پر \عددی{f_1=100} کا استعمال کیا گیا ہے۔
 
-\عددی{20 \log \frac{f}{100}} کی قیمت \عددیء{100}، \عددیء{1000}، \عددی{10000} اور \عددی{100000} کے تعدد پر \عددیء{0}، \عددیء{20}، \عددی{40} اور \عددی{60} ڈیسی بیل حاصل ہوتی ہے۔اس حقیقت کو یوں بیان کیا جا سکتا ہے کہ تعدد دس گنّا کرنے سے افزائش \عددی{\SI{20}{dB}} بڑھتی ہے یا کہ افزائش  \عددی{\SI{20}{dB}} فی دہائی کے شرح سے بڑھتی ہے۔ افقی محور پر تعدد کا لاگ لیتے ہوئے ان قیمتوں کے استعمال سے خط کھینچا گیا ہے۔یہ خط تعدد کے محور کو \عددی{f_1} یعنی \عددی{\log(100)=2} پر چھوتے ہوئے \عددی{\SI{20}{dB}} فی دہائی کے شرح سے بڑھتا ہے۔ایسا خط کھینچتے وقت \عددی{(f_1, \SI{0}{dB})}  اور  \عددی{(10 f_1, \SI{20}{dB})} کے مقام پر نقطے  لگا کر انہیں سیدھی لکیر سے جوڑتے ہوئے حاصل کیا جاتا ہے۔
+\عددی{20 \log \frac{f}{100}} کی قیمت \عددیء{100}، \عددیء{1000}، \عددی{10000} اور \عددی{100000} کے تعدد پر \عددیء{0}، \عددیء{20}، \عددی{40} اور \عددی{60} ڈیسی بیل حاصل ہوتی ہے۔اس حقیقت کو یوں بیان کیا جا سکتا ہے کہ تعدد دس گنّا کرنے سے افزائش \عددی{\SI{20}{dB}} بڑھتی ہے یا کہ افزائش  \عددی{\SI{20}{dB}} فی دہائی کے شرح سے بڑھتی ہے۔ افقی محور پر تعدد کا لوگارتھم لیتے ہوئے ان قیمتوں کے استعمال سے خط کھینچا گیا ہے۔یہ خط تعدد کے محور کو \عددی{f_1} یعنی \عددی{\log(100)=2} پر چھوتے ہوئے \عددی{\SI{20}{dB}} فی دہائی کے شرح سے بڑھتا ہے۔ایسا خط کھینچتے وقت \عددی{(f_1, \SI{0}{dB})}  اور  \عددی{(10 f_1, \SI{20}{dB})} کے مقام پر نقطے  لگا کر انہیں سیدھی لکیر سے جوڑتے ہوئے حاصل کیا جاتا ہے۔
 
 شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف میں \عددی{(f_1, \SI{0}{dB})} یعنی \عددی{(10^2, \SI{0}{dB})} پر نقطہ \عددی{a} اور اسی طرح \عددی{(10 f_1, \SI{20}{dB})} یعنی \عددی{(10^3,\SI{20}{dB})} پر نقطہ \عددی{b} دکھائے گئے ہیں۔نہایت کم تعدد پر مساوات \حوالہ{مساوات_تعدد_ردعمل_بوڈا_کم_تعدد_حصہ} کے مطابق اس جزو کی قیمت \عددی{\SI{0}{dB}} ہے۔حقیقت میں بوڈا خط کھینچتے وقت کم تعدد کو \عددی{f \ll f_1} کی بجائے \عددی{f \le f_1} لیا جاتا ہے۔یوں نقطہ \عددی{a} سے کم تعدد پر اس جزو کی قیمت \عددی{\SI{0}{dB}} دکھائی گئی ہے۔اس طرح بوڈا خط کھینچتے ہوئے  نہایت زیادہ تعدد کو \عددی{f \gg f_1} کی بجائے \عددی{f \ge f_1} لیا جاتا ہے۔ یوں اگر \عددی{a} پر \عددی{\SI{0}{dB}} ہو تب دس گنا زیادہ تعدد پر \عددی{\SI{20}{dB}} ہو گا۔اس نقطے  کو \عددی{b} سے ظاہر کیا گیا ہے۔\عددی{a} تک \عددی{\SI{0}{dB}} پر رہتا ہوا اور \عددی{a} اور \عددی{b} سے گزرتا سیدھا خط دوسرے جزو کا \اصطلاح{بوڈا خط} ہے۔
 
@@ -518,7 +518,7 @@ A_v& =A_{vD} \left(\frac{j f +f_1}{j f +f_2} \right)\\
 \end{gather}
 حاصل ہوتا ہے  جہاں آخری قدم پر \عددی{f_2=10000} کا استعمال کیا گیا ہے۔
 
-\عددی{-20 \log \frac{f}{10000}} کی قیمت \عددیء{10000}، \عددیء{100000}، \عددی{1000000} اور \عددی{10000000} کے تعدد پر \عددیء{0}، \عددیء{-20}، \عددی{-40} اور \عددی{-60} ڈیسی بیل حاصل ہوتی ہے۔اس حقیقت کو یوں بیان کیا جا سکتا ہے کہ تعدد دس گنّا کرنے سے افزائش \عددی{\SI{20}{dB}} گھٹتی ہے یا کہ افزائش  \عددی{\SI{-20}{dB}} فی دہائی کے شرح سے تبدیل ہوتی ہے۔ افقی محور پر تعدد کا لاگ لیتے ہوئے ان قیمتوں کے استعمال سے خط کھینچا گیا ہے۔یہ خط تعدد کے محور کو \عددی{f_2} یعنی \عددی{\log(10000)=4} پر چھوتے ہوئے \عددی{\SI{-20}{dB}} فی دہائی کے شرح سے تبدیل ہوتا ہے۔ایسا خط کھینچتے وقت \عددی{f_2} تعدد پر \عددی{\SI{0}{dB}} اور \عددی{10 f_2} تعدد پر \عددی{\SI{-20}{dB}}  کے مقام پر نقطے  لگا کر انہیں سیدھی لکیر سے جوڑتے ہوئے حاصل کیا جاتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف  میں ان نقطوں کو \عددی{c} اور \عددی{d} سے ظاہر کیا گیا ہے۔یاد رہے کہ \عددی{f_2} یعنی \عددی{10^4} سے کم تعدد پر اس جزو کی قیمت \عددی{\SI{0}{dB}} ہے۔
+\عددی{-20 \log \frac{f}{10000}} کی قیمت \عددیء{10000}، \عددیء{100000}، \عددی{1000000} اور \عددی{10000000} کے تعدد پر \عددیء{0}، \عددیء{-20}، \عددی{-40} اور \عددی{-60} ڈیسی بیل حاصل ہوتی ہے۔اس حقیقت کو یوں بیان کیا جا سکتا ہے کہ تعدد دس گنّا کرنے سے افزائش \عددی{\SI{20}{dB}} گھٹتی ہے یا کہ افزائش  \عددی{\SI{-20}{dB}} فی دہائی کے شرح سے تبدیل ہوتی ہے۔ افقی محور پر تعدد کا لوگارتھم لیتے ہوئے ان قیمتوں کے استعمال سے خط کھینچا گیا ہے۔یہ خط تعدد کے محور کو \عددی{f_2} یعنی \عددی{\log(10000)=4} پر چھوتے ہوئے \عددی{\SI{-20}{dB}} فی دہائی کے شرح سے تبدیل ہوتا ہے۔ایسا خط کھینچتے وقت \عددی{f_2} تعدد پر \عددی{\SI{0}{dB}} اور \عددی{10 f_2} تعدد پر \عددی{\SI{-20}{dB}}  کے مقام پر نقطے  لگا کر انہیں سیدھی لکیر سے جوڑتے ہوئے حاصل کیا جاتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف  میں ان نقطوں کو \عددی{c} اور \عددی{d} سے ظاہر کیا گیا ہے۔یاد رہے کہ \عددی{f_2} یعنی \عددی{10^4} سے کم تعدد پر اس جزو کی قیمت \عددی{\SI{0}{dB}} ہے۔
 
 شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} ب میں ان تینوں خطوط کا مجموعہ لیا گیا ہے جو کہ مساوات  \حوالہ{مساوات_تعددی_ردعمل_بوڈا_جزو_مثال} کے \عددی{\abs{A_v}} کا مکمل \اصطلاح{بوڈا خط} ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف میں نقطہ \عددی{a} پر  مساوات \حوالہ{مساوات_تعددی_ردعمل_بوڈا_خط_حیطہ} کے پہلے جزو کے خط کی قیمت \عددی{\SI{5}{dB}} جبکہ بقایا دو اجزاء کے قیمتیں \عددی{\SI{0}{dB}} ہیں۔یوں ان کا مجموعہ \عددی{\SI{5}{dB}} ہے جسے شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} ب میں  \عددی{a'} سے ظاہر کیا گیا ہے۔\عددی{b} پر ان تین اجزاء کے قیمتیں \عددیء{\SI{5}{dB}}، \عددی{\SI{20}{dB}} اور \عددی{\SI{0}{dB}} ہیں جن کے مجموعہ \عددی{\SI{25}{dB}} کو \عددی{b'} سے ظاہر کیا گیا ہے۔\عددی{c} پر تینوں کا مجموعہ \عددی{\SI{45}{dB}} کو \عددی{c'} سے ظاہر کیا گیا ہے۔\عددی{d} پر تین اجزاء کے قیمتیں \عددیء{\SI{5}{dB}}، \عددی{\SI{60}{dB}} اور \عددی{\SI{-20}{dB}} ہیں جن کا مجموعہ \عددی{\SI{45}{dB}} ہی ہے۔اس نقطے  کو \عددی{d'} سے ظاہر کیا گیا ہے۔
 
