--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -1343,7 +1343,7 @@ g_m=k_n \left[V_{GS}-V_t \right ]=k_n \sqrt{\frac{2 I_{DS}}{k_n}}=\sqrt{2 k_n I_
 \end{align*} 
 حاصل ہوتا ہے۔
 
-ماسفیٹ کے گیٹ اور سورس کے مابین \عددی{C_{gs}} کپیسٹر پایا جاتا ہے۔اسی طرح گیٹ اور ڈرین کے مابین \عددی{C_{gd}} کپیسٹر پایا جاتا ہے۔کم تعدد پر ان کپیسٹر کو نظرانداز کیا جاتا ہے البتہ بلند تعدد پر ان کو نظرانداز کرنا ممکن نہیں ہوتا۔یوں بلند تعدد پر ماسفیٹ کے پائے ریاضی نمونے میں انہیں شامل کرنے سے \اصطلاح {بلند تعددی پائےریاضی نمونہ}\فرہنگ{نمونی!ریاضی بلند تعددی} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_باریک_اشاراتی_بلند_تعددی_ماسفیٹ_ماڈل} میں دکھایا گیا ہے۔
+ماسفیٹ کے گیٹ اور سورس کے مابین \عددی{C_{gs}} کپیسٹر پایا جاتا ہے۔اسی طرح گیٹ اور ڈرین کے مابین \عددی{C_{gd}} کپیسٹر پایا جاتا ہے۔کم تعدد پر ان کپیسٹر کو نظرانداز کیا جاتا ہے البتہ بلند تعدد پر ان کو نظرانداز کرنا ممکن نہیں ہوتا۔یوں بلند تعدد پر ماسفیٹ کے پائے ریاضی نمونے میں انہیں شامل کرنے سے \اصطلاح {بلند تعددی پائےریاضی نمونہ}\فرہنگ{نمونہ!ریاضی بلند تعددی} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_باریک_اشاراتی_بلند_تعددی_ماسفیٹ_ماڈل} میں دکھایا گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{MOSFETsmallSignalHighFrequencyModel}
