--- a/tex/electronicsPreface.tex
+++ b/tex/electronicsPreface.tex
@@ -1,6 +1,6 @@
 \thispagestyle{empty}
 \باب{دیباچہ}
-برقی آلات اور عددی ادوار کے بعد مماثل برقیات میری تیسری کتاب ہے۔یہ کتاب بھی اس امید کے ساتھ لکھی گئی ہے کہ یہ ایک دن برقی انجنیئرنگ کی نصابی کتاب کے طور پر پڑھائی جائے گی۔امید کی جاتی ہے کہ اب بھی طلبہ و طالبات اس سے استفادہ حاصل کر سکیں گے۔
+برقی آلات اور عددی ادوار کے بعد مماثل برقیات میری تیسری کتاب ہے۔یہ کتاب بھی اس امید کے ساتھ لکھی گئی ہے کہ یہ ایک دن برقی انجنیئرنگ کی نصابی کتاب کے طور پر پڑھائی جائے گی۔امید کی جاتی ہے کہ اب بھی طلبہ و طالبات اس سے استفادہ  کر سکیں گے۔
 
 اس کتاب میں تقریباً \عددی{503} اشکال اور \عددی{174} حل شدہ مثال دئے گئے ہیں۔اس کے علاوہ  مشق کے لئے  \عددی{175} سوالات  بمع جوابات بھی دیے گئے ہیں۔
 
@@ -20,7 +20,7 @@ Microelectronic Circuits by Sedra-Smith
 \end{otherlanguage}
 }
 
-جبکہ اردو اصطلاحات چننے میں درج ذیل لغت سے استفادہ حاصل کیا گیا۔
+جبکہ اردو اصطلاحات چننے میں درج ذیل لغت سے استفادہ  کیا گیا۔
 {
 \begin{otherlanguage}{english}
 \begin{itemize}
