--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -12,7 +12,7 @@
 \usepackage{mathpazo}
 \usepackage{booktabs}                                  %for tables toprule, midrule and bottomrule
 %\usepackage{parskip}
-\usepackage[stable]{footmisc}						%for footnotes in the headings
+\usepackage[stable,bottom]{footmisc}						%for footnotes in the headings
 
 \usepackage{siunitx} 			%SI units that meets iso-31 regulations such as \micro, \degree \SI{3}{\celsius}
 \sisetup{per=frac,fraction=nice}    %setup for siunitx
