--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -2334,7 +2334,7 @@ i_R&=I_S \left(e^{\frac{v_{CB}}{V_T}}-1 \right )
 \end{align}
 %===================
 \حصہ{نفی کار}\شناخت{حصہ_ٹرانزسٹر_نفی_کار}
-شکل \حوالہ{شکل_ٹرانزسٹر_افقی_عکس_عمودی_منتقلی} میں چند خطوط دکھائے گئے ہیں۔آپ \عددیء{y=m x} کے خط سے بخوبی واقف ہیں۔یہ خط کارتیسی محدد کے مرکزی  نقطہ \عددیء{(0,0)} سے گزرتا ہے۔اسی شکل میں \عددیء{y=-m x} کو بھی دکھایا گیا ہے۔آپ دیکھ سکتے ہیں کہ \عددیء{x} محور میں \عددیء{y=mx} کا  عکس لینے سے \عددیء{y=-m x} حاصل ہوتا ہے۔اگر \عددیء{y=mx} کو \عددیء{(0,0)} سے \عددیء{(0,c)} منتقل کیا جائے تو \عددیء{y=m x+c} حاصل ہوتا ہے۔اسی طرح  \عددیء{y=-mx} کو \عددیء{(0,0)} سے \عددیء{(0,c)} منتقل کرنے سے \عددیء{y=-m x+c} حاصل ہوتا ہے۔
+شکل \حوالہ{شکل_ٹرانزسٹر_افقی_عکس_عمودی_منتقلی} میں چند خطوط دکھائے گئے ہیں۔آپ \عددیء{y=m x} کے خط سے بخوبی واقف ہیں۔یہ خط کارتیسی محدد کے مبدا \عددیء{(0,0)} سے گزرتا ہے۔اسی شکل میں \عددیء{y=-m x} کو بھی دکھایا گیا ہے۔آپ دیکھ سکتے ہیں کہ \عددیء{x} محور میں \عددیء{y=mx} کا  عکس لینے سے \عددیء{y=-m x} حاصل ہوتا ہے۔اگر \عددیء{y=mx} کو \عددیء{(0,0)} سے \عددیء{(0,c)} منتقل کیا جائے تو \عددیء{y=m x+c} حاصل ہوتا ہے۔اسی طرح  \عددیء{y=-mx} کو \عددیء{(0,0)} سے \عددیء{(0,c)} منتقل کرنے سے \عددیء{y=-m x+c} حاصل ہوتا ہے۔
 
 اسی طرح  \عددیء{x=f(y)} کا \عددیء{y} محور میں عکس \عددیء{x=-f(y)} ہو گا اور خط کو مثبت \عددیء{x} جانب \عددیء{c} اکائی منتقل کرنے سے \عددیء{x=f(y)+c} حاصل ہوتا ہے۔ان حقائق کو یوں بیان کیا جا سکتا ہے۔
 \begin{itemize}
