--- a/electronicsLatex.tex
+++ b/electronicsLatex.tex
@@ -13,7 +13,12 @@
 %\includeonly{./tex/electronicsSymbols,./tex/electronicsPreface,./tex/prefaceFirstBook,./tex/electronicsMOSFET}
 
 
-\author{خالد خان یوسفزئی}
+\author{
+خالد خان یوسفزئی\\
+\\
+{\small {جامعہ کامسیٹ، اسلام آباد}}\\
+\texttt{khalidyousafzai@comsats.edu.pk}
+}
 
 \title{مماثل برقیات}
 \date{}                           %if absent gives date in arabic which is a rubbish
