--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -166,7 +166,7 @@ v_{GD} & \le V_t &&&&\textup{افزائندہ}
 حل:
 \begin{enumerate}
 \item
-موصل سلاخ کو ایک مزاحمت تصور کیا جا سکتا ہے۔یوں اس مسئلہ کو شکل  ب کے طرز پر پیش کیا جا سکتا ہے جس میں \عددی{\SI{100}{\milli \ampere}} برقی رو پیدا ہو گی۔مزید یہ کہ سو اُوہم کے مزاحمت کو کئی مزاحمت سلسلہ وار جڑے تصور کیا جا سکتا ہے۔شکل  پ میں اسے چار عدد \عددی{\SI{20}{\ohm}}  سلسلہ وار جڑے تصور کیا گیا ہے جہاں ہر جوڑ پر برقی دباو بھی دکھایا گیا ہے۔
+موصل سلاخ کو ایک مزاحمت تصور کیا جا سکتا ہے۔یوں اس مسئلہ کو شکل  ب کے طرز پر پیش کیا جا سکتا ہے جس میں \عددی{\SI{100}{\milli \ampere}} برقی رو پیدا ہو گی۔مزید یہ کہ سو اُوہم کے مزاحمت کو کئی مزاحمت سلسلہ وار جڑے تصور کیا جا سکتا ہے۔شکل  پ میں اسے پانچ عدد \عددی{\SI{20}{\ohm}}  سلسلہ وار جڑے تصور کیا گیا ہے جہاں ہر جوڑ پر برقی دباو بھی دکھایا گیا ہے۔
 \item
 چونکہ ڈرین سرے پر 
 \begin{align*}
@@ -631,6 +631,7 @@ i_{DS}&=k_n \left[\left(v_{GS}-V_t \right )v_{DS}-\frac{v_{DS}^{2}}{2} \right ]\
 \caption{ماسفیٹ کے یک سمتی ادوار}
 \label{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_الف}
 \end{figure}
+
 حل: \عددی{n} قسم کے بڑھاتا ماسفیٹ کے \عددی{V_t}  کی قیمت ہر صورت مثبت ہوتی ہے۔ \عددی{n} قسم کے ماسفیٹ کا گیٹ اور سورس آپس میں جوڑنے سے \عددی{V_{\textup{GS}}=0} ہو جاتا ہے اور یوں  \عددی{V_{\textup{GS}} < V_t}  ہوتا ہے جس سے ماسفیٹ منقطع ہو جاتا ہے اور  \عددی{I_{DS}=0}  ہوتا ہے۔
 
 \انتہا{مثال}
@@ -728,7 +729,7 @@ V_{DS}&=V_{GS}=10-0.8639 \times 10^{-3} \times 4700=\SI{5.94}{\volt}
 V_{DD}&=I_{DS}R_D+V_{DS}\\
 10&=I_{DS}\times 4700+V_{DS}
 \end{align*}
-حاصل ہوتا ہے۔چونکہ گیٹ اور ڈرین آپس میں جڑے ہیں لہٰذا ان پر برابر برقی دباو پایا جائے گا یعنی  \عددی{V_{GS}=V_{DS}} ہو گا اور اس مساوات کو یوں بھی لکھ سکتے ہیں۔
+حاصل ہوتا ہے۔چونکہ گیٹ اور ڈرین آپس میں جڑے ہیں لہٰذا ان پر برابر برقی دباو پایا جائے گا یعنی  \عددی{V_{GS}=V_{DS}} ہو گا لہٰذا اس مساوات کو یوں بھی لکھ سکتے ہیں۔
 \begin{align*}
 V_{DD}&=I_{DS}R_D+V_{GS}\\
 10&=I_{DS} \times 4700+V_{GS}\\
@@ -739,26 +740,26 @@ V_{GS}&=10-4700 I_{DS}
 گیٹ اور ڈرین آپس میں جڑے ہونے کی وجہ سے \عددی{V_{GS}-V_{DS}=0} ہو گا۔چونکہ گھٹاتا ماسفیٹ کا \عددی{V_t} منفی مقدار ہوتا ہے لہٰذا \عددی{V_{GS}-V_{DS}>V_t}  ہو گا اور یوں اگر یہ ماسفیٹ چالو  ہو تو یہ ہر صورت  غیر افزائندہ خطے میں ہو گا اور اس کی مساوات غیر افزائندہ ماسفیٹ کی مساوات سے حاصل کی جا سکتی ہے۔
 \begin{align*}
 I_{DS}&=k_n \left[\left(V_{GS}-V_t \right )V_{DS}-\frac{V_{DS}^2}{2}\right]\\
-\frac{2 I_{DS}}{k_n}&=\left(10-4700 I_{DS}+3 \right )(10-4700I_{DS})-\frac{(10-4700I_{DS})^2}{2}\\
-& I_{DS}=\SI{1.45}{\milli \ampere} , \SI{4.98}{\milli \ampere}
+\frac{I_{DS}}{k_n}&=\left(10-4700 I_{DS}+3 \right )(10-4700I_{DS})-\frac{(10-4700I_{DS})^2}{2}\\
+& I_{DS}=\SI{4.3}{\milli \ampere} , \SI{1.68}{\milli \ampere}
 \end{align*}
 ہم جانتے ہیں کہ اگر یہاں ماسفیٹ چالو ہو تب یہ غیر افزائندہ ہو گا لہٰذا دیکھنا یہ ہے کہ آیا ماسفیٹ چالو ہے یا نہیں۔
 
-اگر \عددی{I_{DS}=\SI{4.98}{\milli\ampere}} ہو تب 	
+اگر \عددی{I_{DS}=\SI{4.3}{\milli\ampere}} ہو تب 	
 \begin{align*}
 V_{GS}&=10-4700 I_{DS}\\
-&=10-4700 \times 4.98 \times 10^{-3}\\
-&=\SI{-13}{\volt}
+&=10-4700 \times 4.3 \times 10^{-3}\\
+&=\SI{-10.21}{\volt}
 \end{align*}
 اور یوں \عددی{V_{GS}<V_t} ہو گا جو کہ منقطع ماسفیٹ کی نشانی ہے۔منقطع ماسفیٹ برقی رو گزار ہی نہیں سکتا لہٰذا اس جواب کو رد کیا جاتا ہے۔
 
-اگر \عددی{I_{DS}=\SI{1.45}{\milli \ampere}} ہو تب 	
+اگر \عددی{I_{DS}=\SI{1.68}{\milli \ampere}} ہو تب 	
 \begin{align*}
 V_{GS}&=10-4700 I_{DS}\\
-&=10-4700 \times 1.45 \times 10^{-3}\\
-&=\SI{3.2}{\volt}
+&=10-4700 \times 1.68 \times 10^{-3}\\
+&=\SI{2.104}{\volt}
 \end{align*}
-اور یوں \عددی{V_{GS}>V_t} ہو گا جو کہ چالو ماسفیٹ کی نشانی ہے۔یوں \عددی{{I_{DS}=\SI{1.45}{\milli \ampere}}} ہی درست جواب ہے۔
+اور یوں \عددی{V_{GS}>V_t} ہو گا جو کہ چالو ماسفیٹ کی نشانی ہے۔یوں \عددی{{I_{DS}=\SI{1.68}{\milli \ampere}}} ہی درست جواب ہے۔
 
 \انتہا{مثال}
 %========
