--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -1161,7 +1161,7 @@ A_i=\frac{i_L}{i_b}=\frac{i_{eD}}{i_{bA}}=\frac{i_{eD}}{i_{bD}} \times \frac{i_{
 \begin{aligned}
 r_{e2}=r_{e3}&=\frac{V_T}{I}\\
 r_{be2}=r_{be3}&=\left(\beta+1 \right) r_{e2}\\
-r_{1e}=r_{e4}&=\left(\beta+1 \right) \frac{V_T}{I} =\left(\beta+1 \right)r_{e2}\\
+r_{e1}=r_{e4}&=\left(\beta+1 \right) \frac{V_T}{I} =\left(\beta+1 \right)r_{e2}\\
 r_{be1}=r_{be4}&=\left(\beta+1 \right)^2 r_{e2}
 \end{aligned}
 \end{gather}
@@ -1252,7 +1252,7 @@ A_d=A_{d1} A_{d2}&=-\frac{1}{2}  \times \left(\frac{r_{be5}+r_{be6}}{4 r_{e2}}\r
 
 اس کے علاوہ اگر پہلے ایمپلیفائر میں ڈارلنگٹن جوڑی استعمال نہ کی جائے تب اس کی داخلی مزاحمت آدھی اور  افزائش دگنی ہو جائے گی۔
 
-صفحہ \حوالہصفحہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_افزائش} پر مساوات \حوالہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_افزائش} پر تبصرہ کرتے وقت یہ حقیقت بتلائی گئی تھی کہ اگر افزائش بڑھائی جائے دو داخلی مزاحمت گھٹتی ہے۔تفرقی ایمپلیفائر میں بھی داخلی مزاحمت گھٹاتے ہوئے افزائش بڑھانا ممکن ہے۔
+صفحہ \حوالہصفحہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_افزائش} پر مساوات \حوالہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_افزائش} پر تبصرہ کرتے وقت یہ حقیقت بتلائی گئی تھی کہ اگر افزائش بڑھائی جائے تو داخلی مزاحمت گھٹتی ہے۔تفرقی ایمپلیفائر میں بھی داخلی مزاحمت گھٹاتے ہوئے افزائش بڑھانا ممکن ہے۔
 %==================
 \حصہ{وائڈلر منبع برقی رو}
 شکل \حوالہ{شکل_آئینہ_برقی_رو_الف} میں \عددیء{Q_2} کے ایمٹر پر \عددیء{R_E} نسب کرنے سے  \اصطلاح {وائڈلر منبع برقی رو}\فرہنگ{وائڈلر منبع رو}\فرہنگ{منبع برقی رو!وائڈلر}\حاشیہب{Widlar current source}\فرہنگ{Widlar current source} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو} میں\حاشیہد{باب وائڈلر نے اس دور کو دریافت کیا۔} میں دکھایا گیا ہے۔ٹرانزسٹر کے برقی رو کے مساوات کو استعمال کرتے ہوئے 
@@ -1430,13 +1430,13 @@ i_t=2 i_c
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{wilsonCurrentMirrorOutputImpedanceA}
-\caption{}
+\caption{ولسن آئنے کی خارجی مزاحمت}
 \label{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت_الف}
 \end{figure}
 شکل کو دیکھتے ہوئے
 \begin{align*}
 v_e&=i_c r_e\\
-i_{b3}&=i_c
+i_{b3}&=-i_c
 \end{align*}
 لکھا جا سکتا ہے۔ساتھ ہی ساتھ کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
