--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -64,6 +64,7 @@
 \newcommand*{\زیرنوشت}[3]{\: \ensuremath{{#1_{#2 \textrm {#3}}}} \:}   %english+urdu subscript \زیرنوشت{V}{CE}{غیرافزائندہ}
 \newcommand*{\سیدھازیرنوشت}[2]{\: \ensuremath{{#1_{\textup{#2}}}} \:} %RC
 
+\newcommand{\سن}[1]{؁\,\ensuremath{#1}}
 \newcommand*{\قریب}[1]{\mbox{#1}}
 
 \renewcommand{\indexname}{فرہنگ}        %apparently did nothing
