--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -2028,7 +2028,7 @@ A_{vD}=-\left(\frac{g_m R_L}{\frac{R_i}{R_m}+1} \right) =-\left(\frac{g_m R_L R_
 \end{gather}
 لکھا جا سکتا ہے جہاں کپیسٹر \عددی{C_{b'e}+2C_{b'c}} کے متوازی کل مزاحمت \عددی{R_i \mathbin{\|} R_m}  دراصل متوازی جڑے \عددیء{R_i}، \عددیء{R_1}، \عددیء{R_2} اور \عددیء{r_{be}} کی کل مزاحمت ہے۔آپ دیکھ سکتے ہیں کہ کیسکوڈ ایمپلیفائر کی بلند انقطاعی تعدد کو بھی \عددی{\omega_H=\frac{1}{R C}} کی شکل میں لکھا جا سکتا ہے جہاں \عددی{C} کل کپیسٹر اور \عددی{R} اس کے ساتھ متوازی جڑی کل مزاحمت ہے۔
 
-شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر} الف میں\عددی{Q_1} مشترک ایمٹر ایمپلیفائر ہے۔اگر \عددی{Q_2} کو دور سے نکال کر \عددی{R_L} کو \عددی{Q_1} کے ایمٹر کے ساتھ جوڑا جائے تو شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_مشترک_مخارج_حصہ} میں دکھایا گیا مشترک ایمٹر ایمپلیفائر حاصل ہو گا جس کا درمیانی تعدد پر مساوی دور بھی اسی شکل میں دکھایا گیا ہے۔آئیں زنجیری ضرب کی مدد سے شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_مشترک_مخارج_حصہ} کا \عددی{A_v=\tfrac{v_L}{v_i}} حاصل کریں۔
+شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر} الف میں\عددی{Q_1} مشترک ایمٹر ایمپلیفائر ہے۔اگر \عددی{Q_2} کو دور سے نکال کر \عددی{R_L} کو \عددی{Q_1} کے کلکٹر کے ساتھ جوڑا جائے تو شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_مشترک_مخارج_حصہ} میں دکھایا گیا مشترک ایمٹر ایمپلیفائر حاصل ہو گا جس کا درمیانی تعدد پر مساوی دور بھی اسی شکل میں دکھایا گیا ہے۔آئیں زنجیری ضرب کی مدد سے شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_مشترک_مخارج_حصہ} کا \عددی{A_v=\tfrac{v_L}{v_i}} حاصل کریں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{cascodeCommonEmitterSection}
