--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -1608,16 +1608,16 @@ R_S \mathbin{\|} R_B &= \SI{750}{\ohm} \hspace{5mm}\text{\RL{تھونن مزاح
 \end{figure}
 شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف} الف میں نقطہ دار لکیر کے بائیں جانب حصے کا تھونن مساوی دور لیتے ہوئے شکل  ب حاصل ہوتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف} ب کو دیکھ کر \عددی{v_{b'e}} کی مساوات لکھی جا سکتی ہے۔
 \begin{align*}
-v_{b'e}&=0.0974 v_s \left(\frac{\frac{1}{sC}}{125+\frac{1}{sC}}\right)=0.0974 v_s \left(\frac{1}{125 \times s C+1}\right)\\
-&=\frac{0.0974 v_s }{1+\frac{j \omega}{26 \times 10^6}}=\frac{0.0974 v_s }{1+\frac{j f}{4 \times 10^6}}
+v_{b'e}&=0.101 v_s \left(\frac{\frac{1}{sC}}{125+\frac{1}{sC}}\right)=0.101 v_s \left(\frac{1}{125 \times s C+1}\right)\\
+&=\frac{0.101 v_s }{1+\frac{j \omega}{26 \times 10^6}}=\frac{0.101 v_s }{1+\frac{j f}{4 \times 10^6}}
 \end{align*}
 زنجیری ضرب سے
 \begin{align*}
 A_v=\frac{v_L}{v_s}&=\frac{v_L}{i_c} \times \frac{i_c}{v_{b'e}} \times \frac{v_{b'e}}{v_s}\\
-&=-87 \times 0.5 \times \left(\frac{0.0974}{1+\frac{j f}{4 \times 10^6}}\right)\\
-&=\frac{-4.2}{1+\frac{j f}{4 \times 10^6}}
+&=-87 \times 0.5 \times \left(\frac{0.101}{1+\frac{j f}{4 \times 10^6}}\right)\\
+&=\frac{-4.4}{1+\frac{j f}{4 \times 10^6}}
 \end{align*}
-لکھا جا سکتا ہے جہاں سے بلند انقطاعی تعدد تقریباً \عددی{f_H=\SI{4}{\mega \hertz}} جبکہ درمیانی تعدد کی افزائش \عددی{A_{vD}=\SI{-4.2}{\volt \per \volt}} حاصل ہوتی ہے۔ 
+لکھا جا سکتا ہے۔بلند انقطاعی تعدد تقریباً \عددی{f_H=\SI{4}{\mega \hertz}} جبکہ درمیانی تعدد کی افزائش \عددی{A_{vD}=\SI{-4.4}{\volt \per \volt}} ہے۔ 
 \انتہا{مثال}
 %==================
 \جزوحصہ{مشترکہ سورس ماسفیٹ ایمپلیفائر کا بلند تعددی ردِ عمل}
@@ -2404,7 +2404,7 @@ s^2+2 \zeta s+1=s^2+1.4142s+1
 \end{align*}
 یعنی
 \begin{align*}
-\left(s^2+1.848s \right) \left(s^2+0.765s+1 \right)
+\left(s^2+1.848s +1\right) \left(s^2+0.765s+1 \right)
 \end{align*}
 ہو گا۔
 %
@@ -2497,7 +2497,7 @@ A(s)=\frac{v_o}{v_i}=\frac{A_0 Z_2 Z_4}{Z_2 \left(Z_1+Z_3+Z_4 \right)+Z_1 Z_3+Z_
 \label{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_پست_بلند_گزار}
 \end{figure}
 
-شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_پست_بلند_گزار} الف کے لئے مساوات \حوالہ{مساوات_تعددی_دو_درجی_بٹرورت_فلٹر_کی_افزائش}
+شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_پست_بلند_گزار} الف کے لئے مساوات \حوالہ{مساوات_تعددی_دو_درجی_بٹرورت_فلٹر_کی_افزائش} درج ذیل دیتی ہے۔
 \begin{align}\label{مساوات_تعددی_دو_درجی_بٹرورت_پست_گزار_فلٹر_کی_افزائش}
 A(s)=\frac{A_0 \left(\frac{1}{RC} \right)^2}{s^2+\left(\frac{3-A_0}{RC} \right) s+ \left(\frac{1}{RC} \right)^2}
 \end{align}
