--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -576,7 +576,7 @@ C=\frac{C_1 C_2}{C_1 + C_2}
 \ابتدا{مثال}
 ٹرانزسٹر کا پست تعددی ریاضی نمونہ استعمال کرتے ہوئے شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} الف کو حل کریں۔حل کرتے وقت بنیادی ایمپلیفائر کے داخلی مزاحمت کو لامحدود تصور کرتے ہوئے نظر انداز کریں۔
 
-حل:شکل \حوالہ{شکل_مرتعش_ہارٹلے_مساوی_پست_تعدد_داخلی_مزاحمت_لامحدود} الف میں اس کا باریک اشاراتی مساوی دور دکھایا گیا ہے جس میں \عددیء{R_1 \mathbin{\|} R_2} کو \عددیء{R_b} لکھا گیا ہے۔بنیادی ایمپلیفائر کا داخلی مزاحمت \عددیء{R_b \mathbin{\|} r_{be}}  کے برابر ہے جو \عددیء{j \omega L_1} کے متوازی جڑا ہے۔\عددیء{\abs{j \omega L_1} \gg R_b \mathbin{\|} r_{be}} تصور کرتے ہوئے  شکل  ب حاصل ہوتا ہے۔
+حل:شکل \حوالہ{شکل_مرتعش_ہارٹلے_مساوی_پست_تعدد_داخلی_مزاحمت_لامحدود} الف میں اس کا باریک اشاراتی مساوی دور دکھایا گیا ہے جس میں \عددیء{R_1 \mathbin{\|} R_2} کو \عددیء{R_b} لکھا گیا ہے۔بنیادی ایمپلیفائر کا داخلی مزاحمت \عددیء{R_b \mathbin{\|} r_{be}}  کے برابر ہے جو \عددیء{j \omega L_1} کے متوازی جڑا ہے۔اگرچہ ہم مزاحمت \عددیء{R_b \mathbin{\|} r_{be}} کو شامل کرتے ہوئے آگے بڑھ سکتے ہیں، میں چاہوں گا کہ \عددیء{\abs{j \omega L_1} \ll R_b \mathbin{\|} r_{be}} تصور کرتے ہوئے آگے بڑھیں تا کہ عمومی مرتعش کی طرح نتائج حاصل ہوں جہاں ایمپلیفائر کا داخلی مزاحمت لا متناہی ہے۔یوں  شکل  ب حاصل ہوتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{hartleyResistorLoadedEquivalent}
